--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="keywords" content="rick harrison, nine robot, state college, iphone, android, music" />
-	<meta name="description" content="I am a software developer focused on innovation through web and mobile. Currently, I am part of the team at Sincerely. Previously, I founded a dev shop with two friends called Nine Robot." />
+	<meta name="description" content="I am a software developer focused on innovation through web and mobile. Currently, I am running the development shop Nine Robot that I founded alongside two of my close friends. Previously, I was part of the founding engineering team at Sincerely." />
 	
 	<title>Rick Harrison</title>
 	
