Set up some basic styling for the blog.

--- a/blog.html
+++ b/blog.html
@@ -1,10 +1,15 @@
 ---
+title: Rick Harrison's Blog
+layout: default
 ---
-<ul>
-  {% for post in site.posts %}
-    <li>
-      <a href="{{ post.url | remove: '.html' }}">{{ post.title }}</a>
-      <p>{{ post.excerpt }}</p>
-    </li>
-  {% endfor %}
-</ul>
+
+<div class="section blog">
+    <ul>
+    {% for post in site.posts %}
+        <li>
+            <h2><a href="{{ post.url | remove: '.html' }}">{{ post.title }}</a></h2>
+            {{ post.content }}
+        </li>
+    {% endfor %}
+    </ul>
+</div>
