--- a/index.html
+++ b/index.html
@@ -1,31 +1,7 @@
-<!doctype html>
-<html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="keywords" content="rick harrison, nine robot, state college, iphone, android, music" />
-	<meta name="description" content="I am a software developer focused on innovation through web and mobile. Currently, I am running the development shop Nine Robot that I founded alongside two of my close friends. Previously, I was part of the founding engineering team at Sincerely." />
-	
-	<title>Rick Harrison</title>
-
-    <script type="text/javascript" src="//use.typekit.net/cfm0lqf.js"></script>
-    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-	
-	<link rel="stylesheet" type="text/css" href="styles/main.css" />
-</head>
-<body>
-
-<div id="header">
-    <h1>Rick Harrison</h1>
-</div>
-<div id="border"></div>
-
-<div id="menu" class="section">
-    <a href="/blog" alt="Blog">Blog</a><span class="menu_spacer"></span>
-    <a href="http://twitter.com/rickharrison" alt="Twitter">Twitter</a><span class="menu_spacer"></span>
-    <a href="http://github.com/rickharrison" alt="GitHub">GitHub</a><span class="menu_spacer"></span>
-    <a href="http://stackoverflow.com/users/205007/rickharrison" alt="Stack Overflow">Stack Overflow</a><span class="menu_spacer"></span>
-    <a href="http://news.ycombinator.com/user?id=rickharrison" alt="Hacker News">Hacker News</a>
-</div>
+---
+layout: default
+title: Rick Harrison
+---
 
 <div id="work" class="section">
     <h2><span>Work</span></h2>
@@ -160,6 +136,3 @@
 </div>
 
 <script type="text/javascript">var mpq=[];mpq.push(["init","32c5ef4428288d8248ea2740e4b7b6ea"]);(function(){var a=document.createElement("script");a.type="text/javascript";a.async=true;a.src=(document.location.protocol==="https:"?"https:":"http:")+"//api.mixpanel.com/site_media/js/api/mixpanel.js";var b=document.getElementsByTagName("script")[0];b.parentNode.insertBefore(a,b)})();</script>
-
-</body>
-</html>
