Set up the basic css for blog posts.

--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@ title: Rick Harrison's Blog
 layout: default
 ---
 
-<div class="section blog">
+<div class="blog">
     <ul>
     {% for post in site.posts %}
         <li>
