Added a section for side projects.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@ title: Rick Harrison
     {{ post.excerpt }}
 {% endfor %}
 
+<h2><span>Side Projects</span></h2>
+
+<ul class="side-list">
+    <li>
+        <a href="http://bests.com" class="side-screenshot"><img src="/images/side/bests.png" /></a>
+
+        <h3 class="home-blog"><a href="http://bests.com">Bests</a></h3>
+        <p>Share the movies, tv shows, bands, songs, books, and foods you think are the best!</p>
+        <p>Made with node.js, Ember.js, MongoDB, and Nginx alongside my good friends <a href="https://twitter.com/jaimeejaimee">Jaimee Newberry</a> and <a href="https://twitter.com/kenfinney">Ken Finney</a>.</p>
+        <p><a href="http://bests.com/rickharrison">Check out my profile.</a></p>
+
+        <div style="clear: both;"></div>
+    </li>
+</ul>
+
 <h2><span>Work</span></h2>
 
 <ul class="work-list">
@@ -107,13 +122,13 @@ title: Rick Harrison
 
 <ul class="opensource-list">
     <li>
-        <h3 class="opensource">validate.js</h3>
+        <h3 class="home-blog"><a href="http://rickharrison.github.com/validate.js/">validate.js</a></h3>
         <p>Lightweight JavaScript form validation library inspired by CodeIgniter. No dependencies, just over 1kb gzipped, and customizable!<br />
-        <a href="http://rickharrison.github.com/validate.js/">Source code</a></p>
+        <a href="https://github.com/rickharrison/validate.js">Source code</a></p>
     </li>
 
     <li>
-        <h3 class="opensource">RHHorizontalTableView</h3>
+        <h3 class="home-blog"><a href="https://github.com/rickharrison/RHHorizontalTableView">RHHorizontalTableView</a></h3>
         <p>RHHorizontalTableView is a subclass of UITableView, which is a part of UIKit for iOS. Instead of scrolling vertically, it scrolls horizontally and loads in new cells as they come onto the screen from the left or right.<br />
         <a href="https://github.com/rickharrison/RHHorizontalTableView">Source code</a></p>
     </li>
