Made the side projects section fully responsive.

--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@ title: Rick Harrison
 
 <ul class="side-list">
     <li>
-        <a href="http://bests.com" class="side-screenshot"><img src="/images/side/bests.png" /></a>
+        <div class="side-content">
+            <a href="http://bests.com" class="side-screenshot"><img src="/images/side/bests.png" /></a>
+        </div>
 
-        <h3 class="home-title"><a href="http://bests.com">Bests</a></h3>
-        <p>Share the movies, tv shows, bands, songs, books, and foods you think are the best!</p>
-        <p>Made with node.js, Ember.js, MongoDB, and Nginx alongside my good friends <a href="https://twitter.com/jaimeejaimee">Jaimee Newberry</a> and <a href="https://twitter.com/kenfinney">Ken Finney</a>.</p>
-        <p><a href="http://bests.com/rickharrison">Check out my profile.</a></p>
-
+        <div class="side-content">
+            <h3 class="home-title"><a href="http://bests.com">Bests</a></h3>
+            <p>Share the movies, tv shows, bands, songs, books, and foods you think are the best!</p>
+            <p>Made with node.js, Ember.js, MongoDB, and Nginx alongside my good friends <a href="https://twitter.com/jaimeejaimee">Jaimee Newberry</a> and <a href="https://twitter.com/kenfinney">Ken Finney</a>.</p>
+            <p><a href="http://bests.com/rickharrison">Check out my profile.</a></p>
+        </div>
         <div style="clear: both;"></div>
     </li>
 </ul>
@@ -115,7 +118,6 @@ title: Rick Harrison
         <h3>Cardinal iPhone App</h3>
         <p>Cardinal is the best way to send your favorite facebook photos to your friends as postcards in the mail.</p>
     </li>
-    <div style="clear: both;"></div>
 </ul>
 
 <h2><span>Open Source Projects</span></h2>
