--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@ title: Rick Harrison
     </li>
 
     <li>
-        <a class="screenshot" href="http://itunes.apple.com/us/app/accu-weather-for-ipad/id364614303?mt=8" target="_blank"><img src="/images/work/accuweather_ipad.png" /></a>
+        <a class="screenshot" href="https://itunes.apple.com/us/app/accuweather-weather-for-life/id364616869?mt=8" target="_blank"><img src="/images/work/accuweather_ipad.png" /></a>
 
         <h3>AccuWeather iPad App</h3>
         <p>Weather beautifully designed for iPad. Forecasts, hourly, radar, and video all-in-one.</p>
     </li>
 
     <li>
-        <a class="screenshot" href="http://itunes.apple.com/us/app/trackthepack/id365902611?mt=8" target="_blank"><img src="/images/work/trackthepack_iphone.png" /></a>
+        <a class="screenshot" href="http://trackthepack.com" target="_blank"><img src="/images/work/trackthepack_iphone.png" /></a>
 
         <h3>TrackThePack iPhone App</h3>
         <p>Enter in a tracking number and the app will do the rest. Find detailed events about where your package has been and where it will be going.</p>
