--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ title: Rick Harrison
 
 <ul class="work-list">
     <li>
-        <a class="screenshot" href="http://sincerely.com/ink" target="_blank"><img src="/images/work/ink_iphone.png" /></a>
+        <a class="screenshot sincerely-ink" href="http://sincerely.com/ink" target="_blank"></a>
 
         <h3>Sincerely Ink</h3>
         <p>Send beautiful cards directly to your loved ones from your iPhone, Android or iPad. Sending Christmas and Holiday cards has never been easier.</p>
@@ -43,14 +43,14 @@ title: Rick Harrison
     </li>
 
     <li>
-        <a class="screenshot" href="http://itunes.apple.com/us/app/zappos-mobile/id392988420?mt=8" target="_blank"><img src="/images/work/zappos_iphone.png" /></a>
+        <a class="screenshot zappos-iphone" href="http://itunes.apple.com/us/app/zappos-mobile/id392988420?mt=8" target="_blank"></a>
 
         <h3>Zappos iPhone App</h3>
         <p>The great Zappos.com customer experience brought to iPhone. Browsing and comparing products showcases this app's ease of use.</p>
     </li>
 
     <li>
-        <a class="screenshot" href="http://itunes.apple.com/us/app/postagram/id429264904?mt=8" target="_blank"><img src="/images/work/postagram_iphone.png" /></a>
+        <a class="screenshot postagram" href="http://itunes.apple.com/us/app/postagram/id429264904?mt=8" target="_blank"></a>
 
         <h3>Postagram iPhone App</h3>
         <p>Your favorite digital photos can now be sent to anyone as part of a physical postcard in the mail! All for only 99 cents.</p>
@@ -58,7 +58,7 @@ title: Rick Harrison
     </li>
 
     <li>
-        <a class="screenshot" href="http://dev.sincerely.com" target="_blank"><img src="/images/work/sincerely_ship.png" /></a>
+        <a class="screenshot sincerely-ship" href="http://dev.sincerely.com" target="_blank"></a>
 
         <h3>Sincerely Ship iOS Library</h3>
         <p>Any developer can add the ability to print & ship photos from their iOS application. Include this library to engage your users and monetize your app.</p>
@@ -66,21 +66,21 @@ title: Rick Harrison
     </li>
 
     <li>
-        <a class="screenshot" href="http://www.zappos.com/zappos-ipad-app" target="_blank"><img src="/images/work/zappos_ipad.png" /></a>
+        <a class="screenshot zappos-ipad" href="http://www.zappos.com/zappos-ipad-app" target="_blank"></a>
 
         <h3>Zappos iPad App</h3>
         <p>Core shopping experience for Zappos.com presented on the iPad. Users can browse, compare, and buy from a wide range of products.</p>
     </li>
 
     <li>
-        <a class="screenshot" href="http://itunes.apple.com/us/app/accuweather-com-quick/id348618445?mt=8" target="_blank"><img src="/images/work/accuweather_quick_iphone.png" /></a>
+        <a class="screenshot accuweather-quick" href="http://itunes.apple.com/us/app/accuweather-com-quick/id348618445?mt=8" target="_blank"></a>
 
         <h3>AccuWeather Quick App</h3>
         <p>Weather for iPhone users on the go. Developed for quick looks without loading times or confusing metrics. </p>
     </li>
 
     <li>
-        <a class="screenshot" href="http://itunes.apple.com/us/app/popbooth-photo-booth/id432092216?mt=8" target="_blank"><img src="/images/work/popbooth_ipad.png" /></a>
+        <a class="screenshot popbooth" href="http://itunes.apple.com/us/app/popbooth-photo-booth/id432092216?mt=8" target="_blank"></a>
 
         <h3>PopBooth iOS App</h3>
         <p>Photo booth strips shareable via facebook, email, and as a physical print sent to anyone you want in the mail.</p>
@@ -88,38 +88,31 @@ title: Rick Harrison
     </li>
 
     <li>
-        <a class="screenshot" href="https://itunes.apple.com/us/app/accuweather-weather-for-life/id364616869?mt=8" target="_blank"><img src="/images/work/accuweather_ipad.png" /></a>
+        <a class="screenshot accuweather-ipad" href="https://itunes.apple.com/us/app/accuweather-weather-for-life/id364616869?mt=8" target="_blank"></a>
 
         <h3>AccuWeather iPad App</h3>
         <p>Weather beautifully designed for iPad. Forecasts, hourly, radar, and video all-in-one.</p>
     </li>
 
     <li>
-        <a class="screenshot" href="http://trackthepack.com" target="_blank"><img src="/images/work/trackthepack_iphone.png" /></a>
+        <a class="screenshot trackthepack" href="http://itunes.apple.com/us/app/trackthepack/id365902611?mt=8" target="_blank"></a>
 
         <h3>TrackThePack iPhone App</h3>
         <p>Enter in a tracking number and the app will do the rest. Find detailed events about where your package has been and where it will be going.</p>
     </li>
 
     <li>
-        <a class="screenshot" href="http://itunes.apple.com/us/app/baseball-trade-rumors/id399288399?mt=8" target="_blank"><img src="/images/work/mlbtraderumors_iphone.png" /></a>
+        <a class="screenshot mlbtr" href="http://itunes.apple.com/us/app/baseball-trade-rumors/id399288399?mt=8" target="_blank"></a>
 
         <h3>MLB Trade Rumors iPhone</h3>
         <p>Custom push notifications made this application a hit for MLBTradeRumors.com. Their readers get news delivered to them instantly using their iPhone.</p>
     </li>
 
     <li>
-        <a class="screenshot" href="http://itunes.apple.com/us/app/accuweather-for-iphone/id300048137?mt=8" target="_blank"><img src="/images/work/accuweather_iphone.png" /></a>
+        <a class="screenshot accuweather-iphone" href="http://itunes.apple.com/us/app/accuweather-for-iphone/id300048137?mt=8" target="_blank"></a>
 
         <h3>AccuWeather iPhone App</h3>
         <p>AccuWeather's flagship application for iPhone. Beautifully displays everything from current conditions to radar overlays on Google Maps.</p>
-    </li>
-
-    <li>
-        <a class="screenshot" href="http://itunes.apple.com/us/app/cardinal-facebook-postcards/id496037989?mt=8" target="_blank"><img src="/images/work/cardinal_iphone.png" /></a>
-
-        <h3>Cardinal iPhone App</h3>
-        <p>Cardinal is the best way to send your favorite facebook photos to your friends as postcards in the mail.</p>
     </li>
 </ul>
 
