Switched the bests screenshot to be retina.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ title: Rick Harrison
 <ul class="side-list">
     <li>
         <div class="side-content">
-            <a href="http://bests.com" class="side-screenshot"><img src="/images/side/bests.png" /></a>
+            <a href="http://bests.com" class="side-screenshot"><img src="/images/side/bests@2x.png" /></a>
         </div>
 
         <div class="side-content">
