Added narwhal under side projects.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@ title: Rick Harrison
 <h2><span>Side Projects</span></h2>
 
 <ul class="side-list">
+    <li class="side-item">
+        <div class="side-content">
+            <a href="http://getnarwhal.com" class="side-screenshot"><img src="/images/side/narwhal@2x.png" /></a>
+        </div>
+
+        <div class="side-content">
+            <h3 class="home-title"><a href="http://getnarwhal.com">narwhal for reddit</a></h3>
+            <p>narwhal is a simple yet functional app for reddit designed specifically for iOS 7.</p>
+            <p>Made with the very talented <a href="https://twitter.com/kenfinney">Ken Finney</a>.</p>
+            <p><a href="https://itunes.apple.com/us/app/id845422455?mt=8">Download now!</a></p>
+        </div>
+        <div style="clear: both;"></div>
+    </li>
+
     <li>
         <div class="side-content">
             <a href="http://bests.com" class="side-screenshot"><img src="/images/side/bests@2x.png" /></a>
