Added a post for broccoli-asset-rev

--- a/index.html
+++ b/index.html
@@ -154,6 +154,12 @@ title: Rick Harrison
     </li>
 
     <li>
+        <h3 class="home-title"><a href="https://github.com/rickharrison/broccoli-asset-rev">broccoli-asset-rev</a></h3>
+        <p>Broccoli plugin to add fingerprint checksums and CDN URLs to all of your assets.<br />
+        <a href="https://github.com/rickharrison/broccoli-asset-rev">Source Code</a></p>
+    </li>
+
+    <li>
         <h3 class="home-title"><a href="https://github.com/rickharrison/RHHorizontalTableView">RHHorizontalTableView</a></h3>
         <p>RHHorizontalTableView is a subclass of UITableView, which is a part of UIKit for iOS. Instead of scrolling vertically, it scrolls horizontally and loads in new cells as they come onto the screen from the left or right.<br />
         <a href="https://github.com/rickharrison/RHHorizontalTableView">Source code</a></p>
